test/compilable/imports/imp12399stdio.d
module imports.imp12399stdio;

struct File {}
