test/fail_compilation/fail309.d
struct C {
  const x = C.x;
}

